@@ -5,4 +5,15 @@ we used some Assets owned by Arvi Teikari (under a fair-use) and others are made
 
 ## How to play ? 
 
-//TODO finish the README
+First you have to make sure that the file "baba.jar" is in the same folder than the folder "src".
+Then you can type into your terminal ```java --enable-preview -jar baba.jar <options>```
+If there is no specified option the game will start with the default level.
+
+You can play a specified level like this : 
+
+```java --enable-preview -jar baba.jar --level name: <levelX.txt>```
+
+You can also play several levels by specify a folder like this : 
+
+```java --enable-preview -jar baba.jar --levels name: <name folder>```
+
